fix:change name class and label

--- a/index.html
+++ b/index.html
@@ -67,25 +67,41 @@
         <div class="steps">
           <div class="step">
             <i class="fa-solid fa-user-check"></i>
-            <h5>1</h5>
-            <p>Registrate gratis en BattleZone</p>
+            <div class="info-step">
+              <h5>1</h5>
+              <p>Registrate gratis en BattleZone</p>
+            </div>
           </div>
           <div class="step">
             <i class="fa-solid fa-clipboard-check"></i>
-            <h5>2</h5>
-            <p>Inscríbete a torneos de tus juegos favoritos</p>
+            <div class="info-step">
+              <h5>2</h5>
+              <p>Inscríbete a torneos de tus juegos favoritos</p>
+            </div>
           </div>
           <div class="step">
             <i class="fa-solid fa-trophy"></i>
-            <h5>3</h5>
-            <p>Compite, gana puntos y recibe premios</p>
+            <div class="info-step">
+              <h5>3</h5>
+              <p>Compite, gana puntos y recibe premios</p>
+            </div>
           </div>
         </div>
       </section>
-      <section class="discord">
-        <h2>Únete a la Comunidad BattlePlay</h2>
-        <p>Únete a nuestros eventos, busca equipos y mejora tu nivel.</p>
-        <a href="#" class="discord-btn">Únete a Discord</a>
+      <section class="banner-discord">
+        <div class="discord">
+          <img src="./assets/discord.png" alt="discord" />
+          <div class="overlay">
+            <div class="content">
+              <h2>Únete a la Comunidad BattlePlay</h2>
+              <p>
+                Únete a nuestro servidor para chat en vivo, buscar equipos y
+                recibir noticias antes que nadie.
+              </p>
+              <a href="https://discord.com/" class="btn">Unirse a Discord →</a>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
