feat:Add card-tournaments

--- a/pages/torneos.html
+++ b/pages/torneos.html
@@ -1,11 +1,308 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Torneo</title>
+    <link rel="stylesheet" href="../css/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/ff37227b15.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header>
+      <a href="../index.html" class="logo"> BattleZone </a>
+
+      <nav class="menu" id="menu">
+        <ul>
+          <li><a href="../index.html">Nosotros</a></li>
+          <li><a href="./torneos.html">Torneos</a></li>
+          <li><a href="./inscripcion.html">Inscripción</a></li>
+          <li><a href="./contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <h2 class="title-tournaments">Torneos</h2>
+      <section class="tournaments">
+        <article class="card-tournaments">
+          <img src="../assets/lol.png" alt="" />
+          <div class="card-info">
+            <div class="title-card">
+              <h5>League of Legends</h5>
+              <h3>Global Esports Games Tour 2025</h3>
+            </div>
+            <div class="option-card">
+              <div class="option">
+                <i class="fa-brands fa-fort-awesome"></i>
+                <p>Eliminación Simple</p>
+              </div>
+              <div class="option">
+                <i class="fa-solid fa-people-group"></i>
+                <p>4v4</p>
+              </div>
+              <div class="option">
+                <i class="fa-solid fa-users-rays"></i>
+                <p>40/60</p>
+              </div>
+            </div>
+            <div class="host">
+              <h6>Anfitrión</h6>
+              <p>
+                Gobierno del Perú y la Federación Peruana de Deportes
+                Electrónicos
+              </p>
+            </div>
+            <div class="card-pie">
+              <p>Junio 5, 6:00 PM</p>
+              <p><i class="fa-solid fa-clipboard-check"></i> S/.30</p>
+            </div>
+          </div>
+        </article>
+        <article class="card-tournaments">
+            <img src="../assets/mortal-kombat.png" />
+            <div class="card-info2">
+              <div class="title-card">
+                <h5>Mortal Kombat</h5>
+                <h3>Global Esports Games Tour 2025</h3>
+              </div>
+              <div class="option-card">
+                <div class="option">
+                  <i class="fa-brands fa-fort-awesome"></i>
+                  <p>Eliminación Simple</p>
+                </div>
+                <div class="option">
+                  <i class="fa-solid fa-people-group"></i>
+                  <p>4v4</p>
+                </div>
+                <div class="option">
+                  <i class="fa-solid fa-users-rays"></i>
+                  <p>40/60</p>
+                </div>
+              </div>
+              <div class="host">
+                <h6>Anfitrión</h6>
+                <p>
+                  Gobierno del Perú y la Federación Peruana de Deportes
+                  Electrónicos
+                </p>
+              </div>
+              <div class="card-pie">
+                <p>Junio 5, 6:00 PM</p>
+                <p><i class="fa-solid fa-clipboard-check"></i> S/.30</p>
+              </div>
+            </div>
+          </article>
+          <article class="card-tournaments">
+            <img src="../assets/fornite.png" alt="" />
+            <div class="card-info3">
+              <div class="title-card">
+                <h5>Fortnite</h5>
+                <h3>Global Esports Games Tour 2025</h3>
+              </div>
+              <div class="option-card">
+                <div class="option">
+                  <i class="fa-brands fa-fort-awesome"></i>
+                  <p>Eliminación Simple</p>
+                </div>
+                <div class="option">
+                  <i class="fa-solid fa-people-group"></i>
+                  <p>4v4</p>
+                </div>
+                <div class="option">
+                  <i class="fa-solid fa-users-rays"></i>
+                  <p>40/60</p>
+                </div>
+              </div>
+              <div class="host">
+                <h6>Anfitrión</h6>
+                <p>
+                  Gobierno del Perú y la Federación Peruana de Deportes
+                  Electrónicos
+                </p>
+              </div>
+              <div class="card-pie">
+                <p>Junio 5, 6:00 PM</p>
+                <p><i class="fa-solid fa-clipboard-check"></i> S/.30</p>
+              </div>
+            </div>
+          </article>
+          <article class="card-tournaments">
+            <img src="../assets/counter-strike.png" alt="" />
+            <div class="card-info4">
+              <div class="title-card">
+                <h5>Counter Strike</h5>
+                <h3>Global Esports Games Tour 2025</h3>
+              </div>
+              <div class="option-card">
+                <div class="option">
+                  <i class="fa-brands fa-fort-awesome"></i>
+                  <p>Eliminación Simple</p>
+                </div>
+                <div class="option">
+                  <i class="fa-solid fa-people-group"></i>
+                  <p>4v4</p>
+                </div>
+                <div class="option">
+                  <i class="fa-solid fa-users-rays"></i>
+                  <p>40/60</p>
+                </div>
+              </div>
+              <div class="host">
+                <h6>Anfitrión</h6>
+                <p>
+                  Gobierno del Perú y la Federación Peruana de Deportes
+                  Electrónicos
+                </p>
+              </div>
+              <div class="card-pie">
+                <p>Junio 5, 6:00 PM</p>
+                <p><i class="fa-solid fa-clipboard-check"></i> S/.30</p>
+              </div>
+            </div>
+          </article>
+          <article class="card-tournaments">
+            <img src="../assets/overwatch.png" alt="" />
+            <div class="card-info4">
+              <div class="title-card">
+                <h5>Overwatch2</h5>
+                <h3>Global Esports Games Tour 2025</h3>
+              </div>
+              <div class="option-card">
+                <div class="option">
+                  <i class="fa-brands fa-fort-awesome"></i>
+                  <p>Eliminación Simple</p>
+                </div>
+                <div class="option">
+                  <i class="fa-solid fa-people-group"></i>
+                  <p>4v4</p>
+                </div>
+                <div class="option">
+                  <i class="fa-solid fa-users-rays"></i>
+                  <p>40/60</p>
+                </div>
+              </div>
+              <div class="host">
+                <h6>Anfitrión</h6>
+                <p>
+                  Gobierno del Perú y la Federación Peruana de Deportes
+                  Electrónicos
+                </p>
+              </div>
+              <div class="card-pie">
+                <p>Junio 5, 6:00 PM</p>
+                <p><i class="fa-solid fa-clipboard-check"></i> S/.30</p>
+              </div>
+            </div>
+          </article>
+          <article class="card-tournaments">
+            <img src="../assets/valorant.png" alt="" />
+            <div class="card-info3">
+              <div class="title-card">
+                <h5>Valorant</h5>
+                <h3>Global Esports Games Tour 2025</h3>
+              </div>
+              <div class="option-card">
+                <div class="option">
+                  <i class="fa-brands fa-fort-awesome"></i>
+                  <p>Eliminación Simple</p>
+                </div>
+                <div class="option">
+                  <i class="fa-solid fa-people-group"></i>
+                  <p>4v4</p>
+                </div>
+                <div class="option">
+                  <i class="fa-solid fa-users-rays"></i>
+                  <p>40/60</p>
+                </div>
+              </div>
+              <div class="host">
+                <h6>Anfitrión</h6>
+                <p>
+                  Gobierno del Perú y la Federación Peruana de Deportes
+                  Electrónicos
+                </p>
+              </div>
+              <div class="card-pie">
+                <p>Junio 5, 6:00 PM</p>
+                <p><i class="fa-solid fa-clipboard-check"></i> S/.30</p>
+              </div>
+            </div>
+          </article>
+          <article class="card-tournaments">
+            <img src="../assets/cod-warzone.png" alt="" />
+            <div class="card-info2">
+              <div class="title-card">
+                <h5>COD: Warzone</h5>
+                <h3>Global Esports Games Tour 2025</h3>
+              </div>
+              <div class="option-card">
+                <div class="option">
+                  <i class="fa-brands fa-fort-awesome"></i>
+                  <p>Eliminación Simple</p>
+                </div>
+                <div class="option">
+                  <i class="fa-solid fa-people-group"></i>
+                  <p>4v4</p>
+                </div>
+                <div class="option">
+                  <i class="fa-solid fa-users-rays"></i>
+                  <p>40/60</p>
+                </div>
+              </div>
+              <div class="host">
+                <h6>Anfitrión</h6>
+                <p>
+                  Gobierno del Perú y la Federación Peruana de Deportes
+                  Electrónicos
+                </p>
+              </div>
+              <div class="card-pie">
+                <p>Junio 5, 6:00 PM</p>
+                <p><i class="fa-solid fa-clipboard-check"></i> S/.30</p>
+              </div>
+            </div>
+          </article>
+          <article class="card-tournaments">
+            <img src="../assets/dota.png" alt="" />
+            <div class="card-info">
+              <div class="title-card">
+                <h5>Dota 2</h5>
+                <h3>Global Esports Games Tour 2025</h3>
+              </div>
+              <div class="option-card">
+                <div class="option">
+                  <i class="fa-brands fa-fort-awesome"></i>
+                  <p>Eliminación Simple</p>
+                </div>
+                <div class="option">
+                  <i class="fa-solid fa-people-group"></i>
+                  <p>4v4</p>
+                </div>
+                <div class="option">
+                  <i class="fa-solid fa-users-rays"></i>
+                  <p>40/60</p>
+                </div>
+              </div>
+              <div class="host">
+                <h6>Anfitrión</h6>
+                <p>
+                  Gobierno del Perú y la Federación Peruana de Deportes
+                  Electrónicos
+                </p>
+              </div>
+              <div class="card-pie">
+                <p>Junio 5, 6:00 PM</p>
+                <p><i class="fa-solid fa-clipboard-check"></i> S/.30</p>
+              </div>
+            </div>
+          </article>
+      </section>
+    </main>
+    <footer>
+        <p>© 2025 BattleZone - Todos los derechos reservados</p>
+      </footer>
+  </body>
 </html>
