feat:Add new nav

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <li><a href="./pages/torneos.html">Torneos</a></li>
           <li><a href="./pages/inscripcion.html">Inscripción</a></li>
           <li><a href="./pages/contacto.html">Contacto</a></li>
+          <li><a href="./pages/juego.html">Juego</a></li>
         </ul>
       </nav>
     </header>
