--- a/pages/torneos.html
+++ b/pages/torneos.html
@@ -20,6 +20,7 @@
           <li><a href="./torneos.html">Torneos</a></li>
           <li><a href="./inscripcion.html">Inscripción</a></li>
           <li><a href="./contacto.html">Contacto</a></li>
+          <li><a href="./juego.html">Juego</a></li>
         </ul>
       </nav>
     </header>
